# zentinel-agent-bot-management

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
data/: bad_patterns.json  good_bots.json
src/: agent.rs  cache.rs  challenge.rs  config.rs  lib.rs  main.rs  score.rs
src/detectors/: behavioral.rs  headers.rs  known_bots.rs  mod.rs  user_agent.rs
tests/: integration.rs
